--- a/CommissionModule/src/main/resources/META-INF/resources/commissiontab/evaluation/print.jspf
+++ b/CommissionModule/src/main/resources/META-INF/resources/commissiontab/evaluation/print.jspf
@@ -19,7 +19,7 @@
 			
 			<portlet:param name="izvewenija_id" value="<%= String.valueOf(izvewenija.getIzvewenija_id()) %>" />
 			<portlet:param name="viewMode" value="<%= Constants.PRINT %>" />
-			<portlet:param name="mvcPath"     value="<%=CommissionConstants.PROTOCOL %>"/>
+			<portlet:param name="mvcPath"     value="<%=CommissionConstants.PAGE_PRINT_PROTOCOL_CONTRACT %>"/>
 		</portlet:renderURL>
 
 <% String popupURL="javascript:showPopup('" + printPageURL + "'" + ",'" + LanguageUtil.get(request, "title") +"');";%>
